--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ ProyectoAKKA/build.xml
 ProyectoAKKA/build/classes/.netbeans_automatic_build
 ProyectoAKKA/build/classes/.netbeans_update_resources
 ProyectoAKKA/manifest.mf
+/ProyectoAKKA/nbproject/private/
